# CIEL-2

./: .~lock.lettre motiv.odt#  1736848516INSA_CENTRE_VAL_DE_LOIRE.ODT  CR situation 4.odt  Client(1)  SERVEURBANQUE  ScientificAmericanNew6GNetworks.odt  forbesNetworkingInTheDigitalAge.odt  lettre motiv.odt
English bby/: Diapo The dangers of screens.odt
FiestaDeLosMuertos/.runtime/: .save  projectInfo.html
Maths/: EXO1 classe excel.ods  Equa diff exo.odt  Exercice 29 pages 31Modifiable.ods  geogebra proba tuto 
Projet/: .~lock.Bilan entrées sorties.odt#  Bilan entrées sorties.odt  CORRECTION_DESCRIPTION_DES_CU___PILOTAGE_ARROSAGE_AUTOMATIQUE(1).ODT  Intervention situation 4.odt  Ressources  tab.odt
Projet/Comptes rendus/: .~lock.a voir.odt#  Bilan entrées sorties.odt  a voir.odt
Projet/Fiches aide /: .~lock.CORRECTION_DESCRIPTION_DES_CU___PILOTAGE_ARROSAGE_AUTOMATIQUE(1).ODT#
Projet/Téléchargements/: RéglagesMenu.psd  (+1 more)
build-PanneauAffichageSImple-Desktop_Qt_6_7_1-Debug/: Makefile  PanneauAffichageSImple  moc_panneauaffichagesimple.cpp  ui_panneauaffichagesimple.h
build-ServeurPanneauSimple-Desktop_Qt_6_7_1-Debug/: Makefile  ServeurPanneauSimple  moc_serveur.cpp  ui_serveur.h
esla/: eslaForbesDocRewrote.odt  eslaScientificAmerican6G.odt
programmation/: SOCKET_TCP.ODT  TestUnitairesDoc.odt
programmation/ExoApplication/: CMakeLists.txt  barre.cpp  barrecarree.cpp  barrecarree.h  barrerectangle.cpp  barrerectangle.h  barreronde.cpp  main.cpp
systeme/: DHCP.ODT  MAEL CONFIGURATION_MAIL.odt  Mael Service_courriel_brut.odt  Moodle Mail  diapo DHCP.odp
(+286 files in other folders)
